force-app/main/default/objects/Account/fields/Account_Manually_Created__c.field-meta.xml
<CustomField>
    <fullName>Account_Manually_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Manually Created</label>
    <type>Checkbox</type>
</CustomField>