force-app/main/default/objects/Account/fields/Account_Max_Demand_kw__c.field-meta.xml
<CustomField>
    <fullName>Account_Max_Demand_kw__c</fullName>
    <description>Added NINT964 BE 05/2014 SERG On standard layout</description>
    <label>Account Max. Demand (kw)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>