force-app/main/default/objects/Account/fields/Account_Name_With_Billing_With_Tanent_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_With_Billing_With_Tanent_Id__c</fullName>
    <formula>Billing_Account_Number_with_Tenant_ID__c + Name</formula>
    <label>Account Name With Billing With Tanent Id</label>
    <type>Text</type>
</CustomField>