force-app/main/default/objects/Account/fields/Account_Owner_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Text__c</fullName>
    <label>Account Owner Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>