force-app/main/default/objects/Account/fields/Account_Utility__c.field-meta.xml
<CustomField>
    <fullName>Account_Utility__c</fullName>
    <label>Account Utility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>