force-app/main/default/objects/Account/fields/Accounts_Previously_Owned__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Previously_Owned__c</fullName>
    <label>Accounts Previously Owned</label>
    <length>50</length>
    <type>Text</type>
</CustomField>