force-app/main/default/objects/Account/fields/Actively_Managed__c.field-meta.xml
<CustomField>
    <fullName>Actively_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added case 47428 klb 3/24/2014</description>
    <inlineHelpText>Please check this box if you are actively in managing this account</inlineHelpText>
    <label>Actively Managed?</label>
    <type>Checkbox</type>
</CustomField>