force-app/main/default/objects/Account/fields/ADDRESS2__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS2__c</fullName>
    <label>ADDRESS2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>