force-app/main/default/objects/Account/fields/Alt_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Alt_Phone_Ext__c</fullName>
    <label>Alt Phone Ext</label>
    <length>25</length>
    <type>Text</type>
</CustomField>