force-app/main/default/objects/Account/fields/Annual_kWh_Impact_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Annual_kWh_Impact_Estimate__c</fullName>
    <description>Created as per case 00050211</description>
    <label>Annual kWh Impact Estimate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>