force-app/main/default/objects/Account/fields/Applies_to_all_Child_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Applies_to_all_Child_Accounts__c</fullName>
    <label>Applies to all Child Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>