force-app/main/default/objects/Account/fields/Audit_Provider__c.field-meta.xml
<CustomField>
    <fullName>Audit_Provider__c</fullName>
    <label>Audit Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSG</fullName>
            </value>
            <value>
                <fullName>HPC</fullName>
            </value>
            <value>
                <fullName>CLR</fullName>
            </value>
            <value>
                <fullName>CET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>