force-app/main/default/objects/Account/fields/BAN_TENANT_ID_SPLIT__c.field-meta.xml
<CustomField>
    <fullName>BAN_TENANT_ID_SPLIT__c</fullName>
    <formula>IF(LEN(Billing_Account_Number_with_Tenant_ID__c) &gt; 8,  (RIGHT(Billing_Account_Number_with_Tenant_ID__c ,2)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAN TENANT ID SPLIT</label>
    <type>Text</type>
</CustomField>