force-app/main/default/objects/Account/fields/Bill_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Email__c</fullName>
    <formula>&quot;tia@unitedcloudsolutions.com&quot;</formula>
    <label>Bill To Email</label>
    <type>Text</type>
</CustomField>