force-app/main/default/objects/Account/fields/Bill_To_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Phone__c</fullName>
    <formula>&quot;(404) 812-8124&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Phone</label>
    <type>Text</type>
</CustomField>