force-app/main/default/objects/Account/fields/Bill_To_User__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_User__c</fullName>
    <formula>&quot;Tia McNamara&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To User</label>
    <type>Text</type>
</CustomField>