force-app/main/default/objects/Account/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique number that identifies an account in the Billing System</inlineHelpText>
    <label>Billing Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>