force-app/main/default/objects/Account/fields/Billing_Account_Number_with_Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number_with_Tenant_ID__c</fullName>
    <description>Added NINT964 KLB 07/2014 SERG on standard layout for</description>
    <formula>Billing_Account_Number__c + Tenant_ID__c</formula>
    <label>Billing Account Number with Tenant ID</label>
    <type>Text</type>
</CustomField>