force-app/main/default/objects/Account/fields/Billing_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Last_Name__c</fullName>
    <label>Billing Contact Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>