force-app/main/default/objects/Account/fields/Billing_Syste__c.field-meta.xml
<CustomField>
    <fullName>Billing_Syste__c</fullName>
    <description>Modified by TJ, related to ITG 445056. Added picklist value.</description>
    <label>Billing System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CBIS</fullName>
            </value>
            <value>
                <fullName>CIM</fullName>
            </value>
            <value>
                <fullName>CMSE</fullName>
            </value>
            <value>
                <fullName>CMSW</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>EVE</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>