force-app/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>added NINT 964 BE 05/2014 SERG On Standard Layout</description>
    <inlineHelpText>Formally known as &quot;Account Attribute&quot; field and is auto-populated based on SIC code.</inlineHelpText>
    <label>Business Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>