force-app/main/default/objects/Account/fields/Create_Trade_Ally_Account__c.field-meta.xml
<CustomField>
    <fullName>Create_Trade_Ally_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Trade Ally Account</label>
    <type>Checkbox</type>
</CustomField>