force-app/main/default/objects/Account/fields/Current_Client__c.field-meta.xml
<CustomField>
    <fullName>Current_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Client</label>
    <type>Checkbox</type>
</CustomField>