force-app/main/default/objects/Account/fields/CUST_EMAIL_PERSONAL__c.field-meta.xml
<CustomField>
    <fullName>CUST_EMAIL_PERSONAL__c</fullName>
    <label>CUST EMAIL PERSONAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>