force-app/main/default/objects/Account/fields/Customer_Account_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Specialist__c</fullName>
    <description>Added by TJ, 01/07/2012, related to case 42754</description>
    <inlineHelpText>Business Service Representative</inlineHelpText>
    <label>Customer Account Specialist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>