force-app/main/default/objects/Account/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>Exists in APCO org so created as part of Data Migration Activity @ CLR298</description>
    <externalId>true</externalId>
    <inlineHelpText>Exists in APCO org so created as part of Data Migration Activity @ CLR298</inlineHelpText>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>