force-app/main/default/objects/Account/fields/Customer_No_Email_Ind__c.field-meta.xml
<CustomField>
    <fullName>Customer_No_Email_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added NINT964 BE 05/2014 SERG On standard Layout</description>
    <label>Customer No Email Ind</label>
    <type>Checkbox</type>
</CustomField>