force-app/main/default/objects/Account/fields/Dataload__c.field-meta.xml
<CustomField>
    <fullName>Dataload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dataload</label>
    <type>Checkbox</type>
</CustomField>