force-app/main/default/objects/Account/fields/Dataload_Id__c.field-meta.xml
<CustomField>
    <fullName>Dataload_Id__c</fullName>
    <externalId>true</externalId>
    <label>Dataload Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>