force-app/main/default/objects/Account/fields/DE_Account_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>DE_Account_Owner_Id__c</fullName>
    <label>DE Account Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>