force-app/main/default/objects/Account/fields/DE_NAICS_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>DE_NAICS_Code_Id__c</fullName>
    <label>DE NAICS Code Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>