force-app/main/default/objects/Account/fields/DE_Org_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>DE_Org_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>DSMTracker_User__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>