force-app/main/default/objects/Account/fields/De_Org_Segment_Manager__c.field-meta.xml
<CustomField>
    <fullName>De_Org_Segment_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment Manager</label>
    <referenceTo>DSMTracker_User__c</referenceTo>
    <relationshipLabel>Accounts (Segment Manager)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>