force-app/main/default/objects/Account/fields/DE_Org_User_Id__c.field-meta.xml
<CustomField>
    <fullName>DE_Org_User_Id__c</fullName>
    <label>DE Org User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>