force-app/main/default/objects/Account/fields/DE_Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>DE_Parent_Account_Id__c</fullName>
    <label>DE Parent Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>