force-app/main/default/objects/Account/fields/DE_Segment_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>DE_Segment_Manager_Id__c</fullName>
    <label>DE Segment Manager Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>