force-app/main/default/objects/Account/fields/DE_SIC_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>DE_SIC_Code_Id__c</fullName>
    <label>DE SIC Code Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>