force-app/main/default/objects/Account/fields/Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Date__c</fullName>
    <description>Added NINT964 BE 05/2014 SERG On standard Layout</description>
    <label>Deleted Date</label>
    <type>Date</type>
</CustomField>