force-app/main/default/objects/Account/fields/Deleted_IND__c.field-meta.xml
<CustomField>
    <fullName>Deleted_IND__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added NINT964 BE 05/2014 SERG On standard Layout</description>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>