force-app/main/default/objects/Account/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Midstream Distributor</label>
    <type>Checkbox</type>
</CustomField>