force-app/main/default/objects/Account/fields/EE_Opt_Out_Indicator__c.field-meta.xml
<CustomField>
    <fullName>EE_Opt_Out_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added NINT964 BE 05/2014 SERG on standard layout</description>
    <inlineHelpText>Box is checked if a Customer is Opted Out</inlineHelpText>
    <label>EE Opt-out Indicator</label>
    <type>Checkbox</type>
</CustomField>