force-app/main/default/objects/Account/fields/EE_Org_Synced_Account__c.field-meta.xml
<CustomField>
    <fullName>EE_Org_Synced_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EE Org Synced Account</label>
    <type>Checkbox</type>
</CustomField>