force-app/main/default/objects/Account/fields/Electric_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Electric_Rate_Code__c</fullName>
    <label>Electric Rate Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>