force-app/main/default/objects/Account/fields/Error_Desc_While_Setting_Master_Org__c.field-meta.xml
<CustomField>
    <fullName>Error_Desc_While_Setting_Master_Org__c</fullName>
    <label>Error Desc While Setting Master Org</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>