force-app/main/default/objects/Account/fields/Error_While_Setting_Master_Org_Sync_Flag__c.field-meta.xml
<CustomField>
    <fullName>Error_While_Setting_Master_Org_Sync_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error While Setting Master Org Sync Flag</label>
    <type>Checkbox</type>
</CustomField>