force-app/main/default/objects/Account/fields/Eusp_Flag__c.field-meta.xml
<CustomField>
    <fullName>Eusp_Flag__c</fullName>
    <label>Eusp Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>