force-app/main/default/objects/Account/fields/EXTERNAL_CUSTOMER_ID__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_CUSTOMER_ID__c</fullName>
    <label>EXTERNAL CUSTOMER ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>