force-app/main/default/objects/Account/fields/FED_PROVERTY_LEVEL_PCT__c.field-meta.xml
<CustomField>
    <fullName>FED_PROVERTY_LEVEL_PCT__c</fullName>
    <label>FED PROVERTY LEVEL PCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>