force-app/main/default/objects/Account/fields/FileNet_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>FileNet_Customer_Name__c</fullName>
    <label>FileNet Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>