force-app/main/default/objects/Account/fields/Gas_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Gas_Account_Status__c</fullName>
    <description>created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Gas Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>