force-app/main/default/objects/Account/fields/Gas_Electric_GasIT__c.field-meta.xml
<CustomField>
    <fullName>Gas_Electric_GasIT__c</fullName>
    <label>Gas/Electric/GasIT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>GasIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>