force-app/main/default/objects/Account/fields/Gas_Flag__c.field-meta.xml
<CustomField>
    <fullName>Gas_Flag__c</fullName>
    <label>Gas Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>