force-app/main/default/objects/Account/fields/Gas_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Gas_Rate_Code__c</fullName>
    <description>Exists in APCO org so created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>Exists in APCO org so created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Gas Rate Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>