force-app/main/default/objects/Account/fields/Grid_Number__c.field-meta.xml
<CustomField>
    <fullName>Grid_Number__c</fullName>
    <label>Grid Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>