force-app/main/default/objects/Account/fields/HOUSE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>HOUSE_TYPE__c</fullName>
    <label>HOUSE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-4 Family</fullName>
            </value>
            <value>
                <fullName>A-Frame</fullName>
            </value>
            <value>
                <fullName>Brownstone</fullName>
            </value>
            <value>
                <fullName>Bungalow</fullName>
            </value>
            <value>
                <fullName>Cape</fullName>
            </value>
            <value>
                <fullName>Colonial</fullName>
            </value>
            <value>
                <fullName>Contemporary</fullName>
            </value>
            <value>
                <fullName>Cottage</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Gambrel</fullName>
            </value>
            <value>
                <fullName>Log Home</fullName>
            </value>
            <value>
                <fullName>Mansard</fullName>
            </value>
            <value>
                <fullName>Mansion</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Old Style</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Raised Ranch</fullName>
            </value>
            <value>
                <fullName>Ranch</fullName>
            </value>
            <value>
                <fullName>Row</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Tripledecker</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Victorian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>