force-app/main/default/objects/Account/fields/HOUSE_YEARBUILT__c.field-meta.xml
<CustomField>
    <fullName>HOUSE_YEARBUILT__c</fullName>
    <label>HOUSE YEARBUILT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>