force-app/main/default/objects/Account/fields/Hub_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Hub_Customer_Id__c</fullName>
    <description>Added NINT964 BE 05/2014 SERG on standard layout</description>
    <externalId>true</externalId>
    <label>Hub Customer Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>