force-app/main/default/objects/Account/fields/ICC_Docket_Date__c.field-meta.xml
<CustomField>
    <fullName>ICC_Docket_Date__c</fullName>
    <label>ICC Docket Date</label>
    <type>Date</type>
</CustomField>