force-app/main/default/objects/Account/fields/ICC_Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>ICC_Docket_Number__c</fullName>
    <label>ICC Docket Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>