force-app/main/default/objects/Account/fields/If_Other_List_Type__c.field-meta.xml
<CustomField>
    <fullName>If_Other_List_Type__c</fullName>
    <label>If Other, List Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>