force-app/main/default/objects/Account/fields/Income_Level__c.field-meta.xml
<CustomField>
    <fullName>Income_Level__c</fullName>
    <label>Income Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>