force-app/main/default/objects/Account/fields/LandLord__c.field-meta.xml
<CustomField>
    <fullName>LandLord__c</fullName>
    <label>LandLord</label>
    <length>5</length>
    <type>Text</type>
</CustomField>