force-app/main/default/objects/Account/fields/LandLord_Number__c.field-meta.xml
<CustomField>
    <fullName>LandLord_Number__c</fullName>
    <label>LandLord Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>