force-app/main/default/objects/Account/fields/Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date__c</fullName>
    <description>Exists in APCO org so created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>Exists in APCO org so created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Last Updated Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>