force-app/main/default/objects/Account/fields/Legacy_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Email_Id__c</fullName>
    <label>Legacy Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>