force-app/main/default/objects/Account/fields/Legacy_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Entity_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Entity Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>