force-app/main/default/objects/Account/fields/Legal_Email__c.field-meta.xml
<CustomField>
    <fullName>Legal_Email__c</fullName>
    <label>Legal Email</label>
    <type>Email</type>
</CustomField>