force-app/main/default/objects/Account/fields/Legal_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_First_Name__c</fullName>
    <label>Legal First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>