force-app/main/default/objects/Account/fields/Legal_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Last_Name__c</fullName>
    <label>Legal_Last_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>