force-app/main/default/objects/Account/fields/Legal_Phone__c.field-meta.xml
<CustomField>
    <fullName>Legal_Phone__c</fullName>
    <label>Legal Phone</label>
    <type>Phone</type>
</CustomField>