force-app/main/default/objects/Account/fields/Low_Income__c.field-meta.xml
<CustomField>
    <fullName>Low_Income__c</fullName>
    <description>so created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>so created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Low Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>