force-app/main/default/objects/Account/fields/Manually_Created__c.field-meta.xml
<CustomField>
    <fullName>Manually_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Created</label>
    <type>Checkbox</type>
</CustomField>